<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">name</string>
    <string name="signup">Sign Up</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender">"Gender : "</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="logout">Logout</string>
    <string name="gotoSignup">"Don't have Account yet ? Sign up now !"</string>
    <string name="gotoLogin">"Already have an account? Sign in here."</string>
    <string name="birthday">Birth date : </string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setDp">You can set a nice DP here !</string>
    <string name="dp_description">It will appear in the profile of the user</string>
    <string name="UploadDP">Next</string>
    <string name="selectDP">Select a DP</string>

    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="earning_expense">"Earnings / Expenses"</string>
    <string name="earning_exepnse">"Earnings / Expenses"</string>
    <string name="menu_investments">"Investments / Loans"</string>
    <string name="menu_lent_borrowed">Lent / Borrowed Money</string>
    <string name="menu_Categories">Categories</string>
    <string name="menu_sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="add_expense">"Add Expenditure"</string>
    <string name="add_earning">"Add Earnings"</string>
    <string name="add_investments">"Add Investments"</string>
    <string name="add_lent">"Add Lent Money"</string>
    <string name="add_borrowed">"Add Borrowed Money"</string>

    <string name="select_category">"Select a section :"</string>
    <string name="category_list">Below is the list of categories :</string>
    <string name="show_categories">Show Categories</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="earnings">Earnings</string>
    <string name="expenditure">Expenditure</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="add_loan">Add Loan</string>
</resources>