<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_e_e"
            android:icon="@drawable/earn_expense"
            android:title="@string/earning_expense" />

        <item
            android:id="@+id/nav_investments"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_investments" />

        <item
            android:id="@+id/nav_lent_borrowed"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/menu_lent_borrowed" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/menu_Categories" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
