<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_e_e"
        android:name="com.example.expensetracker.ui.earnExpense.earnExpense"
        android:label="@string/earning_expense"
        tools:layout="@layout/earn_expense_fragment" />

    <fragment
        android:id="@+id/nav_investments"
        android:name="com.example.expensetracker.ui.Investments.Investments"
        android:label="@string/menu_investments"
        tools:layout="@layout/investments_fragment" />

    <fragment
        android:id="@+id/nav_lent_borrowed"
        android:name="com.example.expensetracker.ui.LentBorrowed.lent_borrowed"
        android:label="@string/menu_lent_borrowed"
        tools:layout="@layout/lent_borrowed_fragment" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.expensetracker.ui.Categories.Categories"
        android:label="@string/menu_Categories"
        tools:layout="@layout/categories_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.expensetracker.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.expensetracker.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.expensetracker.ui.SignOut"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_sign_out" />
</navigation>